This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-06-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* m4/AC_CREATE_PREFIX_CONFIG_H.m4: fix to overwrite 
	include/log4cpp/config.h instead of append to it.
	* include/log4cpp/Makefile.am: remove config.h from dist.
	
2001-06-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.5

	* NEWS: inclusion of Borland C++ Builder support.

	* Makefile.am: only include *.m4 files in m4/ in dist.
	* Makefile.am: fix typos in debian and doc-dir targets.
	
2001-06-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/LayoutAppender.hh: set SimpleLayout as 
	DefaultLayoutType.
	* src/LayoutAppender.cpp (LayoutAppender, setLayout): use 
	DefaultLayoutType to construct new Layouts.
	* src/LayoutAppender.cpp (setLayout): check whether old Layout and
	new Layout are the same object.

	* src/Category.cpp (setAppender): check whether old and new Appender
	are the same object.
	* src/Filter.cpp (setChainedFilter): check whether old and new Filter
	are the same object.

	* include/log4cpp/Config.hh, include/log4cpp/Portability.hh,
	include/log4cpp/OstringStream.hh, include/log4cpp/Makefile.am, 
	src/Appender.cpp, src/AppenderSkeleton.cpp, src/BasicLayout.cpp,
	src/Category.cpp, src/FileAppender.cpp, src/Filter.cpp, 
	src/FixedContextCategory.cpp, src/HierarchyMaintainer.cpp, 
	src/IdsaAppender.cpp, src/LayoutAppender.cpp, src/Log4cppCleanup.cpp,
	src/LoggingEvent.cpp, src/Log4cppCleanup.cpp, src/LoggingEvent.cpp,
	src/NDC.cpp, src/OstreamAppender.cpp, src/OstringStream.cpp,
	src/Priority.cpp, src/SimpleLayout.cpp, src/StringQueueAppender.cpp,
	src/SyslogAppender.cpp, msvc6/log4cpp/log4cpp.dsp,
	tests/testmain.cpp: renamed Config.hh to Portability.hh

	* m4/AC_AS_DIRNAME.m4, m4/AC_AS_MKDIR_P.m4, m4/AC_ECHO_MKFILE.m4:
	removed
	* m4/AC_CREATE_PREFIX_CONFIG_H.m4: replaced AC_ECHO_MKFILE with
	AS_DIRNAME. This means autoconf >= 2.4 required.
